2009-03-12  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.21

2009-03-11  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-window-manager.c: extra check for null dereference

2009-03-11  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	Re-added SGX_CORRUPTION_WORKAROUND as rover seems unstable without
	it.

2009-03-11  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	Now don't create a pixmap for the window frame, but just the 
	inner window (saves memory and allows shaped title bars)
	Refactored all resizing code into one place.
	Fixed bug where fetch_texture did not actually fetch a texture if
	the window id hadn't changed (eg. fullscreen -> windowed change).
	Remove un-required XCompositeNameWindowPixmap that maybe caused
	an extra redraw

2009-03-10  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        * matchbox/core/mb-wm-stack.c: remove debugging code
	accidentally checked in.

2009-03-10  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        Fixes: NB#104487
	
	* matchbox/core/mb-window-manager.c: further to my previous
	fix, let's just say that only MBWMClientTypeDialog can be
	system-modal.

2009-03-10  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.20

2009-03-09  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#103954.
	
	* matchbox/core/mb-window-manager.c: although any window which
	has no parents is considered system-modal, this does not include
	the desktop!

2009-03-09  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	Removed SGX corruption workaround (SGX 1.3 drivers now integrated)

2009-03-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.19

2009-02-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#103417 Animation actors cannot be resized
	Patch from Artem Egorkine.
